# layout3mesh

./: .coverage  .gitignore  Pipfile  README.html  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: test.yml
layout3mesh/: __init__.py  cli.py  data.py  layout3mesh.py
tests/: test_layout3mesh.py
tests/data/: crossed_metal.gds  crossed_metal.glb  mock_layers.ymls
